Prediction Frontend UI

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#2196f3">
     <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap:">
 
-    <title>iux by Maxartkiller - Framework7 template</title>
+    <title>Housing - Predict House Prices</title>
     
     <!-- manifest meta -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -39,7 +39,7 @@
                     <div class="block no-margin-top text-align-center">
                         <div class="icon icon-100 position-relative mx-auto">
                             <figure class="background">
-                                <img src="img/user-1.jpg" alt="">
+                                <img src="img/user-1.png" alt="">
                             </figure>
                         </div>
                     </div>
@@ -47,6 +47,9 @@
                         <ul>
                             <li>
                                 <a href="/home/" class="panel-close active">Home</a>
+                            </li>
+                            <li>
+                                <a href="/about/" class="panel-close active">About</a>
                             </li>
                             <li>
                                 <a href="/analytics/" class="panel-close">Analytics</a>
@@ -283,10 +286,10 @@
                                             </svg>
                                         </div>
                                     </div>
-                                    <h4 class="mt-0 mb-3">Best Houses & Villa</h4>
+                                    <h4 class="mt-0 mb-3">Predict House Prices</h4>
                                     <div class="row mb-3 justify-content-center">
                                         <div class="col-80 medium-50 large-40 mx-auto">
-                                            <p class="small-font text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                            <p class="small-font text-secondary">Predict House Prices in Bangalore. With one click get house price prediction in Bangalore.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -309,7 +312,7 @@
                                     <h4 class="mt-0 mb-3">Book Rooms</h4>
                                     <div class="row mb-3 justify-content-center">
                                         <div class="col-80 medium-50 large-40 mx-auto">
-                                            <p class="small-font text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                            <p class="small-font text-secondary">Book Rooms and Flats in Bangalore. And around bangalore with different filters.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -330,7 +333,7 @@
                                     <h4 class="mt-0 mb-3">Best Houses & Villa</h4>
                                     <div class="row mb-3 justify-content-center">
                                         <div class="col-80 medium-50 large-40 mx-auto">
-                                            <p class="small-font text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                            <p class="small-font text-secondary">Best Houses & Villas in Bangalore with just one click from Housing App.</p>
                                         </div>
                                     </div>
                                 </div>
