--- a/pages/profile.html
+++ b/pages/profile.html
@@ -13,8 +13,8 @@
             </div>
             <div class="right">
                 <a href="/profile/" class="icon icon-44 shadow-sm margin-right-half">
-                    <figure class="m-0 background" style="background-image: url(&quot;img/user-1.jpg&quot;);">
-                        <img src="img/user-1.jpg" alt="" style="display: none;">
+                    <figure class="m-0 background" style="background-image: url(&quot;img/user-1.png&quot;);">
+                        <img src="img/user-1.png" alt="" style="display: none;">
                     </figure>
                 </a>
             </div>
@@ -23,8 +23,8 @@
     <div class="page-content">
         <div class="block text-align-center">
             <div class="icon icon-100 position-relative">
-                <figure class="background" style="background-image: url(&quot;img/user-1.jpg&quot;);">
-                    <img src="img/user-1.jpg" alt="" style="display: none;">
+                <figure class="background" style="background-image: url(&quot;img/user-1.png&quot;);">
+                    <img src="img/user-1.png" alt="" style="display: none;">
                 </figure>
             </div>
         </div>
@@ -34,7 +34,7 @@
                     <div class="item-inner">
                         <div class="item-title">
                             <div class="item-header text-secondary">Name</div>
-                            John Doe
+                            Zuhair Abbas
                         </div>
                     </div>
                 </li>
@@ -43,7 +43,7 @@
                         <div class="item-inner">
                             <div class="item-title">
                                 <div class="item-header text-secondary">Phone</div>
-                                +44 000 000 0000
+                                +91 902 212 2553
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                         <div class="item-inner">
                             <div class="item-title">
                                 <div class="item-header text-secondary">Email</div>
-                                john@doe
+                                zuhairabs@housing.com
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                 <div class="item-inner">
                                     <div class="item-title">
                                         <div class="item-header text-secondary">Birthdate</div>
-                                        22/08/1992
+                                        01/01/2000
                                     </div>
                                 </div>
                             </div>
