--- a/pages/signin.html
+++ b/pages/signin.html
@@ -28,7 +28,7 @@
                     <polyline points="400 179 400 64 352 64 352 133" style="fill:none;stroke:#000;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px"></polyline>
                 </svg>
             </div>
-            <h4 class="margin-bottom">Soroniux</h4>
+            <h4 class="margin-bottom">Housing</h4>
         </div>
         <div class="block">
             <div class="login-box">
@@ -38,7 +38,7 @@
                             <div class="item-inner no-padding-right">
                                 <div class="item-title item-floating-label">Email Address</div>
                                 <div class="item-input-wrap">
-                                    <input type="text" placeholder="Email Address" value="amayjohnson@maxartkiller.coms">
+                                    <input type="text" placeholder="Email Address" value="zuhairabs@housing.com">
                                     <span class="input-clear-button"></span>
                                 </div>
                             </div>
@@ -47,7 +47,7 @@
                             <div class="item-inner no-padding-right">
                                 <div class="item-title item-floating-label">Password</div>
                                 <div class="item-input-wrap">
-                                    <input type="password" placeholder="Your password">
+                                    <input type="password" value="zuhair" placeholder="Your password">
                                     <span class="input-clear-button"></span>
                                 </div>
                             </div>
