Prediction UI Updated | About Page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel="apple-touch-icon" href="img/favicon512.png">
     <link rel="icon" href="img/favicon32.png">
 
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+
 
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet">
@@ -49,7 +51,7 @@
                                 <a href="/home/" class="panel-close active">Home</a>
                             </li>
                             <li>
-                                <a href="/about/" class="panel-close active">About</a>
+                                <a href="/about/" class="panel-close">About</a>
                             </li>
                             <li>
                                 <a href="/analytics/" class="panel-close">Analytics</a>
