--- a/pages/settings.html
+++ b/pages/settings.html
@@ -13,8 +13,8 @@
             </div>
             <div class="right">
                 <a href="/profile/" class="icon icon-44 shadow-sm margin-right-half">
-                    <figure class="m-0 background" style="background-image: url(&quot;img/user-1.jpg&quot;);">
-                        <img src="img/user-1.jpg" alt="" style="display: none;">
+                    <figure class="m-0 background" style="background-image: url(&quot;img/user-1.png&quot;);">
+                        <img src="img/user-1.png" alt="" style="display: none;">
                     </figure>
                 </a>
             </div>            
@@ -24,7 +24,7 @@
         <div class="block text-align-center">
             <div class="icon icon-100 position-relative mx-auto">
                 <figure class="background">
-                    <img src="img/user-1.jpg" alt="">
+                    <img src="img/user-1.png" alt="">
                 </figure>
             </div>
         </div>
@@ -39,7 +39,7 @@
                                         <div class="item-inner">
                                             <div class="item-title item-floating-label">Name</div>
                                             <div class="item-input-wrap">
-                                                <input type="text" placeholder="Name" value="Amay Johnson">
+                                                <input type="text" placeholder="Name" value="Zuhair Abbas">
                                                 <span class="input-clear-button"></span>
                                             </div>
                                         </div>
@@ -54,7 +54,7 @@
                                         <div class="item-inner">
                                             <div class="item-title item-floating-label">Email Address</div>
                                             <div class="item-input-wrap">
-                                                <input type="text" placeholder="Email Address" value="amayjohnson@maxartkiller.coms">
+                                                <input type="text" placeholder="Email Address" value="zuhairabs@housing.com">
                                                 <span class="input-clear-button"></span>
                                             </div>
                                         </div>
@@ -73,7 +73,7 @@
                                                 <div class="item-inner">
                                                     <div class="item-title item-floating-label">Code</div>
                                                     <div class="item-input-wrap">
-                                                        <input type="text" placeholder="Code" value="44">
+                                                        <input type="text" placeholder="Code" value="91">
                                                         <span class="input-clear-button"></span>
                                                     </div>
                                                 </div>
@@ -88,7 +88,7 @@
                                                 <div class="item-inner">
                                                     <div class="item-title item-floating-label">Phone Number</div>
                                                     <div class="item-input-wrap">
-                                                        <input type="text" placeholder="Phone Number" value="000 000 0000">
+                                                        <input type="text" placeholder="Phone Number" value="902 212 2553">
                                                         <span class="input-clear-button"></span>
                                                     </div>
                                                 </div>
