--- a/pages/booking.html
+++ b/pages/booking.html
@@ -13,8 +13,8 @@
             </div>
             <div class="right">
                 <a href="/profile/" class="icon icon-44 shadow-sm margin-right-half">
-                    <figure class="m-0 background" style="background-image: url(&quot;img/user-1.jpg&quot;);">
-                        <img src="img/user-1.jpg" alt="" style="display: none;">
+                    <figure class="m-0 background" style="background-image: url(&quot;img/user-1.png&quot;);">
+                        <img src="img/user-1.png" alt="" style="display: none;">
                     </figure>
                 </a>
             </div>
